Prevent inappropriate horizontal scroll bar

--- a/toolkit/diary/static/diary/css/event.css
+++ b/toolkit/diary/static/diary/css/event.css
@@ -11,7 +11,6 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 90%;
-    overflow: auto;
 }
 
 
